vuruap/rozdział 9/Ingress/deployment-cokolwiek.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-cokolwiek
spec:
  selector:
    matchLabels:
      run: my-nginx-cokolwiek
  replicas: 1
  template:
    metadata:
      labels:
        run: my-nginx-cokolwiek
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80
