vuruap/rozdział 9/Ingress/nginx-volume-port.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: hosting
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/
          name: http-content
      volumes:
      - name: http-content
        hostPath:
          path: /tmp/www-content
          type: DirectoryOrCreate
